--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
+    "source-map-explorer": "^2.5.0",
     "yup": "^0.29.3"
   },
   "scripts": {
@@ -47,5 +48,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://afternoon-peak-84211.herokuapp.com"
 }
