--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://afternoon-peak-84211.herokuapp.com/api/
+REACT_APP_API_URL='https://afternoon-peak-84211.herokuapp.com/api/'
