--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,9 @@
 .env.development.local
 .env.test.local
 .env.production.local
-
+.env*
 npm-debug.log*
-debug.log*
+.debug.log
+
 yarn-debug.log*
 yarn-error.log*
